[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "oldest-supported-numpy",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]

[project]
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "async_retriever",
    "beautifulsoup4",
    "cftime",
    "cltoolbox",
    "dapclient",
    "geojson",
    "haversine",
    "httpretty",
    "isodate",
    "lxml",
    "mechanize",
    "pydaymet",
    "python-dateutil",
    "requests",
    "siphon",
    "suds-community",
    "toolbox_utils >= 5.0.0, < 6.0.0"
]
description = "Will get time series from different sources on the internet"
dynamic = ["readme", "version"]
keywords = [
    "rest",
    "time-series",
    "uri",
    "url",
    "web_services"
]
license = {text = "BSD-3-Clause"}
name = "tsgettoolbox"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "blacken-docs",
    "black-nbconvert",
    "cleanpy",
    "commitizen",
    "coverage[toml]",
    "isort",
    "mypy",
    "pre-commit",
    "pyflakes",
    "pylama",
    "pyle",
    "pylint",
    "pyre",
    "pyroma",
    "pytest",
    "pytest-cov",
    "pytest-mpl",
    "pyupgrade",
    "twine",
    "unimport",
    "velin",
    "vulture"
]

[project.scripts]
tsgettoolbox = "tsgettoolbox.tsgettoolbox:main"

[project.urls]
bitbucket = "https://bitbucket.org/timcera/tsgettoolbox/src/main/"
documentation = "https://timcera.bitbucket.io/tsgettoolbox/docs/index.html#tsgettoolbox-documentation"
github = "https://github.com/timcera/tsgettoolbox"

[tool.check-manifest]
ignore = [
    "docs/_function_autosummary/*",
    ".coverage",
    ".deepsource.toml",
    ".ipynb_checkpoints/*"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "25.1.8"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["examples*", "tools*", "docs*", "tsgettoolbox.tests*"]
where = ["src"]

[tool.setuptools_scm]
